closes #2019 Signed-off-by: Thiwanka Madushan <76912747+Thiwanka570@users.noreply.github.com>

--- a/src/main/webapp/resources/ezcomp/menu.xhtml
+++ b/src/main/webapp/resources/ezcomp/menu.xhtml
@@ -85,6 +85,7 @@
 
                         <p:menuitem 
                             ajax="false" 
+                            action="/opd/patient_accept_payment" 
                             value="Accept Payments"
                             icon="fas fa-money-bill"></p:menuitem>
 
