--- a/src/main/webapp/pharmacy/pharmacy_report_issue_by_date_summery.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_issue_by_date_summery.xhtml
@@ -9,27 +9,28 @@
 
     <ui:define name="subcontent">
         <h:form>
-            <p:panel id="panelPrint" styleClass="noBorder summeryBorder" header="Transfer Issue Summary Report By Date">
-                <h:panelGrid columns="6" styleClass="noPrintButton">
+            <p:panel styleClass="noBorder summeryBorder" header="Transfer Issue Summary Report By Date">
+                <h:panelGrid columns="2" styleClass="noPrintButton">
                     <h:outputLabel value="From Date"/>
-                    <p:calendar value="#{pharmacySaleReport.fromDate}" navigator="true" pattern="#{sessionController.applicationPreference.longDateTimeFormat}"   >
+                    <p:calendar class="mx-4" value="#{pharmacySaleReport.fromDate}" navigator="true" pattern="#{sessionController.applicationPreference.longDateTimeFormat}"   >
                     </p:calendar>
                     <h:outputLabel value="To Date"/>
-                    <p:calendar value="#{pharmacySaleReport.toDate}" navigator="true" pattern="#{sessionController.applicationPreference.longDateTimeFormat}"  >
+                    <p:calendar class="mx-4" value="#{pharmacySaleReport.toDate}" navigator="true" pattern="#{sessionController.applicationPreference.longDateTimeFormat}"  >
                     </p:calendar>
-                    <p:autoComplete styleClass="noPrintButton"  value="#{pharmacySaleReport.department}"  id="fromDep" style="text-align: left; margin: 5px; padding: 5px;"  completeMethod="#{departmentController.completeDept}" var="dept" itemValue="#{dept}" itemLabel="#{dept.name}" forceSelection="true" rendered="true" requiredMessage="You must select a department" >
+                    <h:outputLabel value="From Department"/>
+                    <p:autoComplete class="mx-4" value="#{pharmacySaleReport.department}"  id="fromDep"   completeMethod="#{departmentController.completeDept}" var="dept" itemValue="#{dept}" itemLabel="#{dept.name}" forceSelection="true" rendered="true" requiredMessage="You must select a department" >
                     </p:autoComplete>
-
-                    <p:autoComplete styleClass="noPrintButton"  value="#{pharmacySaleReport.toDepartment}"  id="toDep" style="text-align: left; margin: 5px; padding: 5px;"  completeMethod="#{departmentController.completeDept}" var="dept" itemValue="#{dept}" itemLabel="#{dept.name}" forceSelection="true" rendered="true" requiredMessage="You must select a department" >
+                    <h:outputLabel value="To Department"/>
+                    <p:autoComplete class="mx-4"  value="#{pharmacySaleReport.toDepartment}"  id="toDep"   completeMethod="#{departmentController.completeDept}" var="dept" itemValue="#{dept}" itemLabel="#{dept.name}" forceSelection="true" rendered="true" requiredMessage="You must select a department" >
                     </p:autoComplete>
 
                 </h:panelGrid>
                 <p:watermark value="From Department" for="fromDep"/>
                 <p:watermark value="To Department" for="toDep"/>
 
-                <h:panelGrid columns="3">
+                <h:panelGrid columns="3" class="my-2">
                     <p:commandButton ajax="false" value="Process" action="#{pharmacySaleReport.createIssueReportByDate()}"/>
-                    <p:commandButton ajax="false" value="Excel" actionListener="#{pharmacySaleReport.createIssueReportByDate()}" styleClass="noPrintButton" style="float: right;" >
+                    <p:commandButton ajax="false" value="Excel" actionListener="#{pharmacySaleReport.createIssueReportByDate()}" class="mx-1" >
                         <p:dataExporter type="xlsx" target="sum1" fileName="report_pharmacy_sale_by_date_summery"  />
                     </p:commandButton>
                     <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" >
@@ -37,119 +38,121 @@
                     </p:commandButton>
                 </h:panelGrid>
 
-                <h:panelGrid styleClass="printBlock" columns="2">
-                    <h:outputLabel value="#{pharmacySaleReport.department.name}"/>
-                    <h:outputLabel value=" DEPARTMENT ISSUE REPORT SUMMERY"/>                   
-                    <h:outputLabel value="From Date :  "/>
-                    <h:outputLabel value="#{pharmacySaleReport.fromDate}"  >
-                        <f:convertDateTime pattern="#{sessionController.applicationPreference.longDateFormat}" />
-                    </h:outputLabel>
-                    <h:outputLabel value="To Date"/>
-                    <h:outputLabel value="#{pharmacySaleReport.toDate}"  >
-                        <f:convertDateTime pattern="#{sessionController.applicationPreference.longDateFormat}" />
-                    </h:outputLabel>                       
-                </h:panelGrid>
-
-                <p:dataTable id="sum1" value="#{pharmacySaleReport.billedSummery.bills}" var="i">   
-                    <f:facet name="header">
-                        <p:outputLabel value="Sales Summary Report By Date" />
-                        &#13;&nbsp;
-                        <h:outputLabel value="Form"/>&#13;&nbsp;
-                        <h:outputLabel value="#{pharmacySaleReport.department.name}"/>&#13;&nbsp;
-                        <h:outputLabel value="To"/>
-                        <h:outputLabel value="#{pharmacySaleReport.toDepartment.name}"/>&#13;&nbsp;
-                        <h:outputLabel value="From  "/>
-                        <h:outputLabel value="#{pharmacySaleReport.fromDate}">
-                            <f:convertDateTime pattern="#{sessionController.applicationPreference.shortDateFormat}" ></f:convertDateTime>
+                <p:panel id="panelPrint">
+                    <h:panelGrid styleClass="printBlock" columns="2" class="my-2">
+                        <h:outputLabel  value="#{pharmacySaleReport.department.name}"/>
+                        <h:outputLabel class="my-2" value=" DEPARTMENT ISSUE REPORT SUMMERY"/>                   
+                        <h:outputLabel value="From Date "/>
+                        <h:outputLabel class="mx-4" value="#{pharmacySaleReport.fromDate}"  >
+                            <f:convertDateTime pattern="#{sessionController.applicationPreference.longDateFormat}" />
                         </h:outputLabel>
-                        <h:outputLabel value="To  "/>
-                        <h:outputLabel value="#{pharmacySaleReport.toDate}">
-                            <f:convertDateTime pattern="#{sessionController.applicationPreference.shortDateFormat}" ></f:convertDateTime>
-                        </h:outputLabel>
+                        <h:outputLabel  value="To Date "/>
+                        <h:outputLabel class="mx-4" value="#{pharmacySaleReport.toDate}"  >
+                            <f:convertDateTime pattern="#{sessionController.applicationPreference.longDateFormat}" />
+                        </h:outputLabel>                       
+                    </h:panelGrid>
 
-                    </f:facet>
+                    <p:dataTable id="sum1" value="#{pharmacySaleReport.billedSummery.bills}" var="i">   
+                        <f:facet name="header">
+                            <p:outputLabel value="Sales Summary Report By Date" />
+                            &#13;&nbsp;
+                            <h:outputLabel value="Form"/>&#13;&nbsp;
+                            <h:outputLabel value="#{pharmacySaleReport.department.name}"/>&#13;&nbsp;
+                            <h:outputLabel value="To"/>
+                            <h:outputLabel value="#{pharmacySaleReport.toDepartment.name}"/>&#13;&nbsp;
+                            <h:outputLabel value="From  "/>
+                            <h:outputLabel value="#{pharmacySaleReport.fromDate}">
+                                <f:convertDateTime pattern="#{sessionController.applicationPreference.shortDateFormat}" ></f:convertDateTime>
+                            </h:outputLabel>
+                            <h:outputLabel value="To  "/>
+                            <h:outputLabel value="#{pharmacySaleReport.toDate}">
+                                <f:convertDateTime pattern="#{sessionController.applicationPreference.shortDateFormat}" ></f:convertDateTime>
+                            </h:outputLabel>
 
-                    <p:column headerText="Date">
-                        <f:facet name="header">
-                            <h:outputLabel value="Date" />
                         </f:facet>
-                        <h:outputLabel value="#{i.string}" />
-                    </p:column>
-                    <p:column headerText="Billed" style="text-align: right;">
-                        <f:facet name="header">
-                            <h:outputLabel value="Billed" />
-                        </f:facet>
-                        <h:outputLabel value="#{i.value1}">
+
+                        <p:column headerText="Date">
+                            <f:facet name="header">
+                                <h:outputLabel value="Date" />
+                            </f:facet>
+                            <h:outputLabel value="#{i.string}" />
+                        </p:column>
+                        <p:column headerText="Billed" style="text-align: right;">
+                            <f:facet name="header">
+                                <h:outputLabel value="Billed" />
+                            </f:facet>
+                            <h:outputLabel value="#{i.value1}">
+                                <f:convertNumber pattern="#,##0.00" />
+                            </h:outputLabel>
+                        </p:column>
+                        <p:column headerText="Cancelled" style="text-align: right;">
+                            <f:facet name="header">
+                                <h:outputLabel value="Cancelled" />
+                            </f:facet>
+                            <h:outputLabel value="#{i.value2}">
+                                <f:convertNumber pattern="#,##0.00" />
+                            </h:outputLabel>
+                        </p:column>
+                        <p:column headerText="Refunded" style="text-align: right;">
+                            <f:facet name="header">
+                                <h:outputLabel value="Refunded" />
+                            </f:facet>
+                            <h:outputLabel value="#{i.value3}">
+                                <f:convertNumber pattern="#,##0.00" />
+                            </h:outputLabel>
+                        </p:column>
+                        <p:column headerText="Net Value" style="text-align: right;">
+                            <f:facet name="header">
+                                <h:outputLabel value="Net Value" />
+                            </f:facet>
+                            <h:outputLabel value="#{i.value1+i.value2+i.value3}">
+                                <f:convertNumber pattern="#,##0.00" />
+                            </h:outputLabel>
+                        </p:column>
+                        <p:columnGroup type="footer">
+                            <p:row>
+                                <p:column footerText="Total  "/>
+                                <p:column footerText="#{pharmacySaleReport.billedSummery.billedTotal}" style="text-align: right;">
+                                    <f:facet name="footer" >
+                                        <h:outputLabel value="#{pharmacySaleReport.billedSummery.billedTotal}">
+                                            <f:convertNumber pattern="#,##0.00" />
+                                        </h:outputLabel>
+                                    </f:facet>
+                                </p:column>
+                                <p:column footerText="#{pharmacySaleReport.billedSummery.cancelledTotal}" style="text-align: right;">
+                                    <f:facet name="footer" >
+                                        <h:outputLabel value="#{pharmacySaleReport.billedSummery.cancelledTotal}">
+                                            <f:convertNumber pattern="#,##0.00" />
+                                        </h:outputLabel>
+                                    </f:facet>
+                                </p:column>
+                                <p:column footerText="#{pharmacySaleReport.billedSummery.refundedTotal}" style="text-align: right;">
+                                    <f:facet name="footer" >
+                                        <h:outputLabel value="#{pharmacySaleReport.billedSummery.refundedTotal}">
+                                            <f:convertNumber pattern="#,##0.00" />
+                                        </h:outputLabel>
+                                    </f:facet>
+                                </p:column>
+
+                                <p:column footerText="#{pharmacySaleReport.billedSummery.billedTotal+pharmacySaleReport.billedSummery.cancelledTotal+pharmacySaleReport.billedSummery.refundedTotal}" style="text-align: right;">
+                                    <f:facet name="footer" >
+                                        <h:outputLabel value="#{pharmacySaleReport.billedSummery.billedTotal+pharmacySaleReport.billedSummery.cancelledTotal+pharmacySaleReport.billedSummery.refundedTotal}">
+                                            <f:convertNumber pattern="#,##0.00" />
+                                        </h:outputLabel>
+                                    </f:facet>
+                                </p:column>
+
+                            </p:row>
+                        </p:columnGroup>
+                    </p:dataTable>
+
+                    <h:panelGrid columns="2" style="min-width: 100%;">
+                        <h:outputLabel value="Net Amount"/>
+                        <h:outputLabel value="#{pharmacySaleReport.grantNetTotal}" style="float:  right;">
                             <f:convertNumber pattern="#,##0.00" />
-                        </h:outputLabel>
-                    </p:column>
-                    <p:column headerText="Cancelled" style="text-align: right;">
-                        <f:facet name="header">
-                            <h:outputLabel value="Cancelled" />
-                        </f:facet>
-                        <h:outputLabel value="#{i.value2}">
-                            <f:convertNumber pattern="#,##0.00" />
-                        </h:outputLabel>
-                    </p:column>
-                    <p:column headerText="Refunded" style="text-align: right;">
-                        <f:facet name="header">
-                            <h:outputLabel value="Refunded" />
-                        </f:facet>
-                        <h:outputLabel value="#{i.value3}">
-                            <f:convertNumber pattern="#,##0.00" />
-                        </h:outputLabel>
-                    </p:column>
-                    <p:column headerText="Net Value" style="text-align: right;">
-                        <f:facet name="header">
-                            <h:outputLabel value="Net Value" />
-                        </f:facet>
-                        <h:outputLabel value="#{i.value1+i.value2+i.value3}">
-                            <f:convertNumber pattern="#,##0.00" />
-                        </h:outputLabel>
-                    </p:column>
-                    <p:columnGroup type="footer">
-                        <p:row>
-                            <p:column footerText="Total  "/>
-                            <p:column footerText="#{pharmacySaleReport.billedSummery.billedTotal}" style="text-align: right;">
-                                <f:facet name="footer" >
-                                    <h:outputLabel value="#{pharmacySaleReport.billedSummery.billedTotal}">
-                                        <f:convertNumber pattern="#,##0.00" />
-                                    </h:outputLabel>
-                                </f:facet>
-                            </p:column>
-                            <p:column footerText="#{pharmacySaleReport.billedSummery.cancelledTotal}" style="text-align: right;">
-                                <f:facet name="footer" >
-                                    <h:outputLabel value="#{pharmacySaleReport.billedSummery.cancelledTotal}">
-                                        <f:convertNumber pattern="#,##0.00" />
-                                    </h:outputLabel>
-                                </f:facet>
-                            </p:column>
-                            <p:column footerText="#{pharmacySaleReport.billedSummery.refundedTotal}" style="text-align: right;">
-                                <f:facet name="footer" >
-                                    <h:outputLabel value="#{pharmacySaleReport.billedSummery.refundedTotal}">
-                                        <f:convertNumber pattern="#,##0.00" />
-                                    </h:outputLabel>
-                                </f:facet>
-                            </p:column>
-
-                            <p:column footerText="#{pharmacySaleReport.billedSummery.billedTotal+pharmacySaleReport.billedSummery.cancelledTotal+pharmacySaleReport.billedSummery.refundedTotal}" style="text-align: right;">
-                                <f:facet name="footer" >
-                                    <h:outputLabel value="#{pharmacySaleReport.billedSummery.billedTotal+pharmacySaleReport.billedSummery.cancelledTotal+pharmacySaleReport.billedSummery.refundedTotal}">
-                                        <f:convertNumber pattern="#,##0.00" />
-                                    </h:outputLabel>
-                                </f:facet>
-                            </p:column>
-
-                        </p:row>
-                    </p:columnGroup>
-                </p:dataTable>
-
-                <h:panelGrid columns="2" style="min-width: 100%;">
-                    <h:outputLabel value="Net Amount"/>
-                    <h:outputLabel value="#{pharmacySaleReport.grantNetTotal}" style="float:  right;">
-                        <f:convertNumber pattern="#,##0.00" />
-                    </h:outputLabel>                    
-                </h:panelGrid>
+                        </h:outputLabel>                    
+                    </h:panelGrid>
+                </p:panel>
 
             </p:panel>         
 
