--- a/src/main/webapp/inward/inward_bill_professional.xhtml
+++ b/src/main/webapp/inward/inward_bill_professional.xhtml
@@ -97,7 +97,7 @@
                                 ajax="false"
                                 icon="fas fa-arrow-left"
                                 class="ui-button-secondary" 
-                                action="/inward/admission_profile.xhtml" 
+                                action="#{bhtSummeryController.navigateToInpatientProfile()}" 
                                 >
                             </p:commandButton>
                         </div>
