--- a/src/main/webapp/ward/ward_pharmacy_bht_issue_request_bill.xhtml
+++ b/src/main/webapp/ward/ward_pharmacy_bht_issue_request_bill.xhtml
@@ -118,7 +118,7 @@
                                         ajax="false"
                                         icon="fas fa-arrow-left"
                                         class="ui-button-secondary mx-1" 
-                                        action="/inward/admission_profile.xhtml" 
+                                        action="#{bhtSummeryController.navigateToInpatientProfile()}" 
                                         >
                                     </p:commandButton>
                                 </h:panelGrid>
