--- a/src/main/webapp/inward/inward_bill_outside_charge.xhtml
+++ b/src/main/webapp/inward/inward_bill_outside_charge.xhtml
@@ -43,7 +43,7 @@
                                 ajax="false"
                                 icon="fa fa-id-card"
                                 class="ui-button-secondary " 
-                                action="/inward/admission_profile.xhtml" 
+                                action="#{bhtSummeryController.navigateToInpatientProfile()}" 
                                 >
                             </p:commandButton>
                         </div>
