--- a/src/main/webapp/inward/inward_bill_service.xhtml
+++ b/src/main/webapp/inward/inward_bill_service.xhtml
@@ -125,7 +125,7 @@
                                             ajax="false"
                                             icon="fa fa-id-card"
                                             class="ui-button-secondary " 
-                                            action="/inward/admission_profile.xhtml" 
+                                            action="#{bhtSummeryController.navigateToInpatientProfile()}" 
                                             >
                                         </p:commandButton>
                                     </h:panelGrid>
