--- a/src/main/webapp/inward/inward_room_change_guardian.xhtml
+++ b/src/main/webapp/inward/inward_room_change_guardian.xhtml
@@ -74,7 +74,7 @@
                             ajax="false"
                             icon="fa-solid fa-address-card "
                             class="ui-button-secondary " 
-                            action="/inward/admission_profile.xhtml" 
+                            action="#{bhtSummeryController.navigateToInpatientProfile()}" 
                             >
                         </p:commandButton>
                     </h:panelGrid>
