--- a/src/main/webapp/opd/opd_bill_search.xhtml
+++ b/src/main/webapp/opd/opd_bill_search.xhtml
@@ -22,7 +22,7 @@
                                     <h:panelGroup id="searchKeyword">
                                         <h:outputLabel value="From Date"/>
                                         <p:calendar id="fromDate" 
-                                                    value="#{opdBillController.fromDate}" 
+                                                    value="#{searchController.fromDate}" 
                                                     navigator="false" 
                                                     pattern="#{sessionController.applicationPreference.longDateTimeFormat}" 
                                                     styleClass="dateTimePicker" 
@@ -34,7 +34,7 @@
 
                                         <h:outputLabel value="To Date"/>
                                         <p:calendar id="toDate"
-                                                    value="#{opdBillController.toDate}"
+                                                    value="#{searchController.toDate}"
                                                     navigator="false" 
                                                     styleClass="dateTimePicker"
                                                     pattern="#{sessionController.applicationPreference.longDateTimeFormat}" 
@@ -164,7 +164,9 @@
 
                             <div class="col-md-10">
                                 <p:defaultCommand target="btnSearch" />
-                                <p:dataTable rowIndexVar="i" id="tblBills" value="#{searchController.bills}" 
+                                <p:dataTable rowIndexVar="i" 
+                                             id="tblBills" 
+                                             value="#{searchController.bills}" 
                                              var="bill"  
                                              style="min-width: 100%;"  
                                              rows ="10"
